# rust-rec-service

./: .gitignore  choose_model.ipynb  milvus_load.ipynb  redis_load.ipynb
notebooks/: choose_model.ipynb  hello_milvus.ipynb  milvus_load.ipynb
svc/py/: interface.py
svc/rust/: Cargo.toml
svc/rust/src/: main.rs
svc_py/: consts.py  interface.py  main.py
svc_rust/: Cargo.toml
svc_rust/src/: main.rs
tests/: locustfile.py
