[package]
name = "svc_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
json = "0.12.4"
milvus-sdk-rust = "0.1.0"
prost = "0.12.3"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
tokio = "1.35.1"
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.redis]
redis = "0.24.0"
features = ["json"]
